change cookie method